samples/_failures_safe/1761269468_182d9f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbbc9559.c: In function ‘print_shortest_paths’:
./samples/SAFE/__tmp_fbbc9559.c:176:20: error: missing terminating " character
  176 |             printf("Node %d
      |                    ^~~~~~~~
./samples/SAFE/__tmp_fbbc9559.c:176:13: error: expected expression at end of input
  176 |             printf("Node %d
      |             ^~~~~~
./samples/SAFE/__tmp_fbbc9559.c:176:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fbbc9559.c:176:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fbbc9559.c:176:13: error: expected declaration or statement at end of input
